# textmine2025

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
notebooks/: Data.ipynb
resources/: test_01-07-2024.csv  train.csv
tests/: test_entities.py  test_relations.py
textmine/: entities.py  evaluate.py  inference.py  main.py  relations.py  utils.py
