[project]
name = "textmine"
version = "0.1.0"
description = ""
authors = [
    {name = "Jonas Renault",email = "jonasrenault@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "transformers (>=4.48.2,<5.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "accelerate (>=1.3.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.4"
mypy = "^1.15.0"
pre-commit = "^4.1.0"
black = "^25.1.0"
jupyterlab = "^4.3.5"
pytest = "^8.3.4"
